--- a/guide/templates/mypage.html
+++ b/guide/templates/mypage.html
@@ -4,23 +4,8 @@
 {% load static %}
 
 
-{% block navbar %}
-<li class="nav-item dropdown">
-  <a class="navbar-brand dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-      aria-haspopup="true" aria-expanded="false">
-      <b>Mypage</b>
-  </a>
-  <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">내정보 수정</a>
-      <a class="dropdown-item" href="#">게시글 관리</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Logout</a>
-  </div>
-</li>
-{% endblock %}
-
 {% block contents %}
-<span class="badge badge-pill badge-dark"><h4> 내 정보 </h4></span> <br><br>
+<span class="badge badge-pill badge-dark"><h4> 내 정보 수정 </h4></span> <br><br>
 <span class="badge badge-pill badge-dark"><h4> 내가 작성한 글 </h4></span>
 <br><br>
 
