--- a/guide/templates/guide_new.html
+++ b/guide/templates/guide_new.html
@@ -4,19 +4,6 @@
 {% load static %}
 
 
-{% block navbar %}
-<li class="nav-item dropdown">
-  <a class="navbar-brand dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-      aria-haspopup="true" aria-expanded="false">
-      <b>Mypage</b>
-  </a>
-  <div class="dropdown-menu">
-      <a class="dropdown-item" href="{% url 'mypage' %}">내정보 수정</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Logout</a>
-  </div>
-</li>
-{% endblock %}
 
 {% block contents %}
 <div class = "container">
@@ -35,7 +22,25 @@
             <label for="exampleInputEmail1">Place</label>
             <input type="text" class="form-control" name = "place">
           </div>
+          <label class="mdb-main-label">Select the place</label>
 
+          <select class="mdb-select md-form colorful-select dropdown-primary">            
+            <option value="1">동작구</option>
+            <option value="2">용산구</option>
+            <option value="3">영등포구</option>
+            <option value="3">강남구</option>
+          </select>
+          <br>
+          Guide
+          <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">YES</label>
+          </div>
+          <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">NO</label>
+          </div>
+        
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Content</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" name="content"></textarea>
