--- a/guide/templates/mypage.html
+++ b/guide/templates/mypage.html
@@ -5,7 +5,6 @@
 
 
 {% block contents %}
-<span class="badge badge-pill badge-dark"><h4> 내 정보 수정 </h4></span> <br><br>
 <span class="badge badge-pill badge-dark"><h4> 내가 작성한 글 </h4></span>
 <br><br>
 
@@ -14,7 +13,7 @@
 
   <ul class="sample-cards" style="display: flex; flex-wrap: wrap;">
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="{% static 'img/sea.jpg''%}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{blog.title}}</h5>
         </div>
